# bevy_boilerplate

./: Cargo.toml  README.md
.cargo/: config.toml
src/: main.rs
