[package]
name = "bevy_boilerplate"
version = "0.1.0"
edition = "2021"          # this needs to be 2021, or you need to set "resolver=2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.12.1", features = ["dynamic_linking"] }
